--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -10,13 +10,20 @@
   height: calc(100vh - 10rem);
 }
 
-.menu-active {
-  transform: translateX(100vw);
-  transition: all 1s linear;
+::-webkit-scrollbar {
+  width: 5px;
 }
 
-.menu {
-  transform: translateX(0);
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #cbd5e0;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a0aec0;
 }
 
 @tailwind utilities;
